# renderdoc-winappsdk-titlebar-hang

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Directory.Build.props  README.md  main.cpp  windowsappsdk-selfcontained.manifest.in
